@@ -1,10 +1,12 @@
 DIST globalhotkeys-0.6.0-1.tar.gz 10007 RMD160 0f08237293c0f32082d9bea8cf57ee5a0ff22404 SHA1 b7cc6abfd2c1a76b023f28ad0cdde2602f37b368 SHA256 27b2cbcfc36f2fcd5c8c10e953b43f2ca00dd0721795fd7443399f949709ec99
 DIST globalhotkeys-0.6.0-3.tar.gz 10233 RMD160 55bb987db55a8ca582d15e3ac7355854e4659f68 SHA1 401ee1bf9db77b151cb4e41252971899f54583b2 SHA256 43f63c002151d15ad17e87f1c8ff20b96a9dc7050acc1db179f6d412e99060b7
+DIST globalhotkeys-0.6.0-7.tar.gz 11159 RMD160 64ce1dac0eb7ef19ec2b1850c4ce962afd3b31e4 SHA1 c28455a62174163712fe8b3a8089015b11a48bd9 SHA256 a7fdf55444a0c62ace7374a16dc141493d682b66678593f398d58133cb2fbd0f
 DIST globalhotkeys-0.6.5-6.tar.gz 9870 RMD160 393dbc6a3b046dcb160589dd9ae57070a525ec2b SHA1 095f16b9618a3b7c248ed567513dc7a90f6c31f7 SHA256 728222183cc59970c9179884bd6bb475f81e2cf0b7aa31a1b61a5f0dda225c58
 DIST globalhotkeys-0.6.5-7.tar.gz 9933 RMD160 1e31e55428e947c06f04fd9379967651c25e2882 SHA1 e17cf0db59e2544580d6926708d036a03a6e8437 SHA256 585de77ae118016d9a47c9d23fb05228b7d66d8f8226d05723351e785487c743
 DIST kadu-0.6.5.tar.bz2 1312474 RMD160 26a80cb7b0c7dbc8c2c38ae9b8aa6609eb0fd8ad SHA1 9cacbec423c192f6482d9d67a163350191f5bfe2 SHA256 09f17f4b23a3ea8590135ff4a050b52565f3a364bfe4d986079c5be0bba83fdb
 EBUILD kadu-globalhotkeys-0.6.0_p1.ebuild 220 RMD160 7c49c97732e19f9d5b53687c14cf8f04eac3c1be SHA1 b2258b190683a05382887e6567721a496d4cdf75 SHA256 77771dd8f5b52053cea03c11675af5d484aaf4a2d38f790ec20eae4b81a12953
 EBUILD kadu-globalhotkeys-0.6.0_p3.ebuild 220 RMD160 7c49c97732e19f9d5b53687c14cf8f04eac3c1be SHA1 b2258b190683a05382887e6567721a496d4cdf75 SHA256 77771dd8f5b52053cea03c11675af5d484aaf4a2d38f790ec20eae4b81a12953
+EBUILD kadu-globalhotkeys-0.6.0_p7.ebuild 222 RMD160 d3efd1e042c4146ba41bcfc07f482356b4c7deca SHA1 636630293df9b6f74ac698c4fb30d85dca744f38 SHA256 6620f026440b8f55e702fae3f1b307000b04a4c3ef20fec204ed3c47e2cdc32f
 EBUILD kadu-globalhotkeys-0.6.5_p6.ebuild 251 RMD160 70f750b569b8f65906141eb5bd719bc86ea52b10 SHA1 57aa7e33ba4b0072ba203a5a8082b7fca89c7d67 SHA256 2284eb66c13f1f17a980fcbe8d775df435e51748ba39fe9c7f83c58da742b6cd
 EBUILD kadu-globalhotkeys-0.6.5_p7.ebuild 251 RMD160 70f750b569b8f65906141eb5bd719bc86ea52b10 SHA1 57aa7e33ba4b0072ba203a5a8082b7fca89c7d67 SHA256 2284eb66c13f1f17a980fcbe8d775df435e51748ba39fe9c7f83c58da742b6cd
-MISC ChangeLog 578 RMD160 4835f055263be1b8c4e35f3a94c68c6162518f8e SHA1 32899de2b0f99d313e17ab4b43749da30eda7230 SHA256 6d40aa86c859fdcae06733335db4e718fa0fcc6d315168189d88186352384d3c
+MISC ChangeLog 677 RMD160 74554704d1cbd31fbcf55502f58cec2a517fb54f SHA1 e2ffe56a252a3469b1b2a1c9788a25afa0c95baa SHA256 cea35016f8546789a8c41b4df88e8de7671247f959a274df56fa7625c632c6e3
