@@ -1,0 +1,8 @@
+MOD_TYPE="ext"
+
+inherit kadu-module
+
+SRC_URI="http://www.ultr.pl/kadu/globalhotkeys-${PV/_p/-}.tar.gz"
+DESCRIPTION="Kadu module whichs adds global hotkeys support"
+HOMEPAGE="http://www.ultr.pl/kadu"
+KEYWORDS="~amd64 ~x86"
